--- a/Serene Web App/Serene Web App.Web/Views/Shared/_Layout.cshtml
+++ b/Serene Web App/Serene Web App.Web/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 <head>
     <partial name="@MVC.Views.Shared._LayoutHead" />
     @RenderSection("Head", false)
-    <title>@(ViewData["Title"]) - Serene_Web_App</title>
+    <title>@(ViewData["Title"]) - Inventory App</title>
 </head>
 <body id="s-@(ViewData["PageId"])Page" class="@(ViewData["BodyClass"]) fixed sidebar-mini hold-transition skin-@theme @(darkSidebar ? "dark-sidebar" : "light-sidebar")@(hideNav ? " no-navigation" : " has-layout-event")@(rtl ? " rtl" : "")">
 <div id="PageBackground" style="display: none"></div>
