Added product tab to suppliers dialog Changed product unit datatype to string

--- a/Serene Web App/Serene Web App.Web/wwwroot/Content/site/site.css
+++ b/Serene Web App/Serene Web App.Web/wwwroot/Content/site/site.css
@@ -8110,3 +8110,9 @@ section.content > .s-DataGrid {
 .s-Inventory-SupplierDialog .caption {
   width: 150px;
 }
+.s-Inventory-SupplierProductDialog > .size {
+  width: 650px;
+}
+.s-Inventory-SupplierProductDialog .caption {
+  width: 150px;
+}
