--- a/Serene Web App/Serene Web App.Web/wwwroot/Content/site/site.inventory.less
+++ b/Serene Web App/Serene Web App.Web/wwwroot/Content/site/site.inventory.less
@@ -2,21 +2,41 @@
 
 
 .s-Inventory-ProductDialog {
-    > .size { width: 650px; }
-    .caption { width: 150px; }
+    > .size {
+        width: 650px;
+        height: 500px;
+    }
+
+    .caption {
+        width: 150px;
+    }
 }
 
 .s-Inventory-CategoryDialog {
-    > .size { width: 650px; }
+    > .size { width: 450px; }
     .caption { width: 150px; }
 }
 
 .s-Inventory-SupplierDialog {
-    > .size { width: 650px; }
-    .caption { width: 150px; }
+    > .size { width: 550px; }
+
+    .caption {
+        width: 150px;
+    }
 }
 
 .s-Inventory-SupplierProductDialog {
     > .size { width: 650px; }
-    .caption { width: 150px; }
+
+    .caption {
+        width: 150px;
+    }
+}
+
+.s-Inventory-SupplierProdDialog {
+    > .size { width: 500px; }
+
+    .caption {
+        width: 150px;
+    }
 }
