Removed spinning logo Changed login form placeholders

--- a/Serene Web App/Serene Web App.Web/wwwroot/Content/site/site.css
+++ b/Serene Web App/Serene Web App.Web/wwwroot/Content/site/site.css
@@ -8123,3 +8123,6 @@ section.content > .s-DataGrid {
 .s-Inventory-SupplierProdDialog .caption {
   width: 150px;
 }
+.main-header .logo i {
+  display: none;
+}
