--- a/Serene Web App/Serene Web App.Web/wwwroot/Content/site/site.inventory.less
+++ b/Serene Web App/Serene Web App.Web/wwwroot/Content/site/site.inventory.less
@@ -26,7 +26,10 @@
 }
 
 .s-Inventory-SupplierProductDialog {
-    > .size { width: 650px; }
+    > .size { 
+        width: 500px; 
+        height: 300px 
+    }
 
     .caption {
         width: 150px;
@@ -34,7 +37,21 @@
 }
 
 .s-Inventory-SupplierProdDialog {
-    > .size { width: 500px; }
+    > .size {
+        width: 500px;
+        height: 300px
+    }
+
+    .caption {
+        width: 150px;
+    }
+}
+
+.s-Inventory-ProductSuppDialog {
+    > .size {
+        width: 500px;
+        height: 300px
+    }
 
     .caption {
         width: 150px;
