setup multi-tenant support

--- a/Serene Web App/Serene Web App.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
+++ b/Serene Web App/Serene Web App.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
@@ -1,4 +1,5 @@
-﻿@model Serene_Web_App.Common.DashboardPageModel
+﻿@using Serene_Web_App.Administration;
+@model Serene_Web_App.Common.DashboardPageModel
 @{
     ViewData["Title"] = "Dashboard";
     ViewData["PageId"] = "Dashboard";
@@ -27,17 +28,20 @@
             <a href="/inventory/product" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
         </div>
     </div><!-- ./col -->
-    <div class="col-lg-3 col-xs-6">
-        <!-- small box -->
-        <div class="small-box bg-red">
-            <div class="inner">
-                <h3>@Model.SupplierCount</h3>
-                <p>Total Suppliers</p>
+    @if (Authorization.HasPermission(PermissionKeys.Suppliers))
+    {
+        <div class="col-lg-3 col-xs-6">
+            <!-- small box -->
+            <div class="small-box bg-red">
+                <div class="inner">
+                    <h3>@Model.SupplierCount</h3>
+                    <p>Total Suppliers</p>
+                </div>
+                <div class="icon">
+                    <i class="ion ion-pie-graph"></i>
+                </div>
+                <a href="/inventory/supplier" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
             </div>
-            <div class="icon">
-                <i class="ion ion-pie-graph"></i>
-            </div>
-            <a href="/inventory/supplier" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
-        </div>
-    </div><!-- ./col -->
+        </div><!-- ./col -->
+    }
 </div><!-- /.row -->
