--- a/Serene Web App/Serene Web App.Web/wwwroot/Content/site/site.inventory.less
+++ b/Serene Web App/Serene Web App.Web/wwwroot/Content/site/site.inventory.less
@@ -61,3 +61,28 @@
 .main-header {
     .logo i { display:none }
 }
+
+.s-Inventory-CustomerDialog {
+    > .size { width: 650px; }
+    .caption { width: 150px; }
+}
+
+.s-Inventory-ProductOrderDialog {
+    > .size { width: 650px; }
+    .caption { width: 150px; }
+}
+
+.s-Inventory-PurchaseOrderDialog {
+    > .size { width: 650px; }
+    .caption { width: 150px; }
+}
+
+.s-Inventory-OrderItemDialog {
+    > .size { width: 650px; }
+    .caption { width: 150px; }
+}
+
+.s-Inventory-ShipmentDialog {
+    > .size { width: 650px; }
+    .caption { width: 150px; }
+}
