--- a/Serene Web App/Serene Web App.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
+++ b/Serene Web App/Serene Web App.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
@@ -28,7 +28,7 @@
             <a href="/inventory/product" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
         </div>
     </div><!-- ./col -->
-    @if (Authorization.HasPermission(PermissionKeys.SuppliersAdd))
+    @if (Authorization.HasPermission(PermissionKeys.Admin))
     {
         <div class="col-lg-3 col-xs-6">
             <!-- small box -->
@@ -73,7 +73,7 @@
             </div>
         </div><!-- ./col -->
     }
-    @if (Authorization.HasPermission(PermissionKeys.Store))
+    @if (Authorization.HasPermission(PermissionKeys.Supplier))
     {
         <div class="col-lg-3 col-xs-6">
             <!-- small box -->
