--- a/Serene Web App/Serene Web App.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
+++ b/Serene Web App/Serene Web App.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
@@ -70,6 +70,22 @@
             </div>
         </div><!-- ./col -->
     }
+    @if (Authorization.HasPermission(PermissionKeys.Customer) && !Authorization.HasPermission(PermissionKeys.Admin))
+    {
+        <div class="col-lg-3 col-xs-6">
+            <!-- small box -->
+            <div class="small-box bg-blue">
+                <div class="inner">
+                    <h3>@Model.PurchaseOrderCount</h3>
+                    <p>Purchase Orders</p>
+                </div>
+                <div class="icon">
+                    <i class="ion ion-pie-graph"></i>
+                </div>
+                <a href="/inventory/purchaseorder" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+            </div>
+        </div><!-- ./col -->
+    }
     @if (Authorization.HasPermission(PermissionKeys.Supplier))
     {
         <div class="col-lg-3 col-xs-6">
